Changes EventDispatcher to reset mouse_cursor_source_window correctly

There were cases where EventDispatcher (and WindowServer) were not
resetting mouse_cursor_source_window() correctly, leading to resetting
at the wrong time (when the window was destroyed, vs when removed).

This patch specifically makes EventDispatcher forcefully reset the
mouse_cursor_source_window when the window is moved to an invalid
display. This typically means the window is about to be destroyed.

Additionally this makes WindowServer call to update the mouse cursor
source window when the hierarchy changes on the old and new
hierarchy. This is important as both displays may need to be updated.

Lastly, this removes a DCHECK in WindowManagerState that the
mouse_cursor_source_window is non-null. There are reasons it may be
null during dispatch (for example, the target window was destroyed
with the mouse down).

BUG=783492,613646
TEST=covered by tests

Change-Id: Ifb03d5f334bc61256d796f18a8c197abb4baca11